boost (1.31.0-6) unstable; urgency=low

  * debian/rules: removed package bjam as it is now built from a separate
    source package, boost-jam.

  * boost/iterator/iterator_adaptor.hpp: removed the useless inclusion
    of is_xxx.hpp (from upstream CVS).

  * debian/control: libboost-dev does not depend on libboost-python-dev
    any more

 --

boost (1.31.0-5) unstable; urgency=low

  * libs/python/build/Jamfile: boost-python shared library is now linked
    to libpython2.3 (closes: #243089).

  * boost/graph/isomorphism.hpp: changed type of u1 and u2 in edge_cmp
    from vertex1_t to int (from upstream CVS).
    boost/graph/detail/adjacency_list.hpp: fixed bug with regards to
    in_edge_list for undirected graphs (from upstream CVS).
    (closes: #245390)

  * boost/format/internals.hpp: changed format_item::truncate_ 's type
    from int to streamsize (from upstream CVS) (closes: #247643).

 -- Domenico Andreoli <cavok@debian.org>  Wed, 19 May 2004 22:19:32 +0200

boost (1.31.0-4) unstable; urgency=low

  * debian/control: libboost-python-dev now replaces old
    libboost-dev. Closes: #243432.

 -- Domenico Andreoli <cavok@debian.org>  Tue, 13 Apr 2004 20:55:24 +0200

boost (1.31.0-3) unstable; urgency=low

  * debian/control: libboost-dev depends on libboost-python-dev.
    A few header files include headers in <boost/python/detail/...>,
    for some strange reason.  Closes: #242714, #242801.

  * debian/control: libboost-dev suggests all the libboost-*-dev
    packages.  Closes: #242335.

  * debian/rules: proper bjam man page is created.

  * Move <boost/python.hpp> to libboost-python-dev package.

 -- Domenico Andreoli <cavok@debian.org>  Sat, 10 Apr 2004 16:59:35 +0200

boost (1.31.0-2) unstable; urgency=low

  * Added symlinks in -dev packages to ease linking of programs which
    use Boost libraries.

  * Added symlink to allow dynamic linking to boost-filesystem shared
    library.

  * Updated Debian standards version to 3.6.1.
